--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -40,13 +40,13 @@
 [[main_right]]
   name = "<i class=\"fab fa-github-alt\" style=\"color: #333; font-size: 1rem; line-height: 1.25\"></i>"
   post = ""
-  url = "https://github.com/waxosuit/waxosuit"
+  url = "https://github.com/wascc/wascc-host"
   weight = 10
 
 [[main_right]]
   name = "<i class=\"fab fa-twitter\" style=\"color: #55acee; font-size: 1rem; line-height: 1.25\"></i>"
   post = ""
-  url = "https://twitter.com/wasca_runtime"
+  url = "https://twitter.com/wascc_runtime"
   weight = 20
 
 
