Adding some details on recent and upcoming talks

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -30,6 +30,10 @@
   url = "tutorials/"
   weight = 50
 
+[[main]]
+  name = "Talks"
+  url = "talk/"
+  weight = 60
 
 #[[main]]
 #  name = "Contact"
