--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -124,7 +124,7 @@ contact_links = [
 sharing_image = ""
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = "wasca_runtime"
+twitter = "wascc_runtime"
 
 ############################
 ## Regional Settings
