--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -3,11 +3,11 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-[[main]]
-  pre = "<i class=\"fas fa-images pr-1\" ></i>"
-  name = "Showcase"
-  url = "#hero"
-  weight = 10
+#[[main]]
+#  pre = "<i class=\"fas fa-images pr-1\" ></i>"
+#  name = "Showcase"
+#  url = "#hero"
+#  weight = 10
 
 [[main]]
   pre = "<i class=\"fas fa-book pr-1\" ></i>"
@@ -17,7 +17,7 @@
 
 [[main]]
   name = "Posts"
-  url = "#posts"
+  url = "post/"
   weight = 20
 
 [[main]]
